# jsi-playground-cxx

./: .gitignore  README.md  package.json  react-native-image-colors.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/reactnativeimagecolors/: ImageColorsModule.kt  ImageColorsPackage.kt
cpp/: conanfile.txt  example.cpp  example.h
example/: package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/example/reactnativeimagecolors/: MainApplication.java
example/ios/: Podfile
example/ios/ImageColorsExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: ImageColors.h  ImageColors.mm
ios/ImageColors.xcodeproj/: project.pbxproj
src/: index.tsx
